--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ matrix:
         - DEPLOY_ENV="true"
     - python: 3.7
       env: CONDA_ENV=py37
-
+      dist: xenial
+      sudo: true
 addons:
     apt:
         packages:
@@ -53,14 +54,6 @@ install:
     - echo "install"
     - conda env create --file ci/requirements-$CONDA_ENV.yml
     - source activate test_env # all envs are named test_env in the yml files
-    # needed to make sure that pandas is compiled against the right
-    # version of numpy
-    - if [[ "$CONDA_ENV" == "py27-min" ]]; then
-        pip uninstall numpy --yes;
-        pip uninstall pandas --yes;
-        pip install --no-cache-dir numpy==1.10.1;
-        pip install --no-cache-dir pandas==0.16.0;
-      fi
     - conda list
     - echo $PATH
     - ls -l /home/travis/miniconda/envs/test_env/lib
